--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@
  * ------------------------------------------------------------------- */
 :root {
 
-    /* color-1(#3F885C)
+    /* color-1(#042285)
      * color-2(#BA2D0B)
      */
     --color-1                       : hsla(144, 37%, 39%, 1);
