--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@
 :root {
 
     /* color-1(#042285)
-     * color-2(#BA2D0B)
+     * color-2(#042285)
      */
     --color-1                       : hsla(144, 37%, 39%, 1);
     --color-2                       : hsla(12, 89%, 39%, 1);
